--- a/reports/march/main.tex
+++ b/reports/march/main.tex
@@ -31,7 +31,7 @@
 \maketitle
 
 \section*{Summary}
-The main purpose of the internship is to integrate LLVM/Clang packages to Buildroot.
+The main purpose of this internship is to integrate LLVM/Clang packages to Buildroot.
 This package will activate new functionalities such as enabling llvmpipe software
 rasterizer (useful for systems which do not have a dedicated GPU) and providing OpenCL
 support for existing packages already present in Buildroot . Once LLVM is present
@@ -127,7 +127,7 @@ will fail. Mesa's configure script clearly states that llvm-config may not give
 the correct output when LLVM is build as a single shared library.
 
 \subsection*{Achievements}
-At this date, llvmpipe was successfully tested in the following systems:
+At this date, llvmpipe was successfully tested on the following systems:
 \begin{itemize}
   \item x86\_64
   \item ARM
@@ -296,8 +296,9 @@ LLVM libraries and will also facilitate the integration of Clang front-end, whic
 will be provided in a future patch series.
 
 \subsection*{PATCH v3}
-The PATCH v3 series sent to the Buildroot mailing list on the $9^{th}$ March
-contains the following 6 commits:
+The PATCH v3 series\footnote{http://lists.busybox.net/pipermail/buildroot/2018-March/215490.html}
+sent to the Buildroot mailing list on the $9^{th}$ March contains the following
+6 commits:
 \begin{itemize}
   \item {[PATCH v3 1/6]} package/llvm: new host package
   \item {[PATCH v3 2/6]} package/llvm: enable target variant
@@ -336,8 +337,8 @@ There are multiple open source OpenCL implementations for Linux:
 \begin{itemize}
   \item \textbf{Clover (Computing Language over Gallium)}\\\\
   It is a hardware independent OpenCL API implementation that works with Gallium
-  Drivers (hardware dependent userspace GPU drivers). Currently it supports OpenCL
-  1.1 and it is close to 1.2. It was merged into Mesa in 2012 and has the following
+  Drivers (hardware dependent userspace GPU drivers). It currently supports OpenCL
+  1.1 and it is close to 1.2 and was merged into Mesa in 2012. It has the following
   dependencies:
     \begin{itemize}
       \item \textbf{libclang}: provides an OpenCL C compiler frontend and generates LLVM IR.
@@ -388,7 +389,7 @@ Driver). It needs the following components to work:
   calls to OpenCL implementations.
   \item \textbf{/etc/OpenCL/vendors/*.icd}: these files tell the ICD loader which
   OpenCL implementations (ICDs) are installed on the sytem. Each file has a single
-  line containing the name of the shared library containing the implementation.
+  line containing the name of the shared library with the implementation.
   \item \textbf{One or more OpenCL implementations (the ICDs)}: the shared libraries
   pointed by the .icd files.
 \end{itemize}
@@ -463,7 +464,7 @@ following ones:
 This library provides an implementation of the library requirements of the
 OpenCL C programming language, as specified by the OpenCL 1.1 specification.
 It is designed to be portable and extensible, as it provides generic
-implementations of most library requiremnts, allowing targets to override them
+implementations of most library requirements, allowing targets to override them
 at the granularity of individual functions, using LLVM intrinsics for example.
 It currently supports AMDGCN, R600 and NVPTX targets.\\\\
 There is a particular problem with libclc: when OpenCL programs call clBuildProgram
@@ -475,7 +476,7 @@ to the target as the embedded platform is not intended to store development file
 mainly because there is no compiler installed on it. But since OpenCL works with
 libLLVM to do code generation, a place to store clc headers must be found.\\\\
 The file that adds the path to libclc headers is invocation.cpp, located at
-src/gallium/state\_trackers/clover/llvm inside Mesa's source tree:\\
+src/gallium/state\_trackers/clover/llvm, inside Mesa's source tree:\\
 
 \begin{lstlisting}[language=C++,caption={Extract from invocation.cpp},captionpos=b]
 // Add libclc generic search path
@@ -495,7 +496,7 @@ LIBCLC_LIBEXECDIR=`$PKG_CONFIG --variable=libexecdir libclc`
 
 Currently, header files are being copied to /usr/include/clc once the root
 filesystem is generated, but this solution is only for testing because systems
-generated with Buildroot must work directly after being generated. The next step
+generated with Buildroot must work directly after being built. The next step
 is to test if LIBCLC\_INCLUDEDIR can be overwritten by specifying another path
 instead of using pkg-config.
 
@@ -560,7 +561,7 @@ packaging from Romain Naour's series
   \item {[PATCH v2 2/3]} package/waffle: new package
   \item {[PATCH v2 3/3]} package/piglit: new package
 \end{itemize}
-To run the OpenCL test suite the following command must be executed:
+To run the OpenCL test suite, the following command must be executed:
 \begin{lstlisting}[language=sh]
   piglit run tests/cl results/cl
 \end{lstlisting}
@@ -754,10 +755,11 @@ This happens in the following scenario: target architecture = host architecture
 As the RPATH of llvm-config specifies \$ORIGIN/../lib (seen using readelf -d
 llvm-config) and the binary is located in STAGING\_DIR/usr/bin, it tries to link
 with the libc of the target, resuting in the error displayed above.\\\\
-It was found that function llvm\_setup\_rpath in AddLLVM.cmake sets this RPATH, but
-it just returns in case CMAKE\_INSTALL\_RPATH is defined. So the final solution was
-passing HOST\_LLVM\_CONF\_OPTS += -DCMAKE\_INSTALL\_RPATH="\$(HOST\_DIR)/lib" in llvm.mk,
-so that LLVM binaries compiled for the host always link with host's libraries.\\\\
+It was found that function {\fontfamily{qcr}\selectfont llvm\_setup\_rpath} in
+AddLLVM.cmake sets this RPATH, but it just returns in case CMAKE\_INSTALL\_RPATH
+is defined. So the final solution was passing HOST\_LLVM\_CONF\_OPTS += -DCMAKE\_INSTALL\_RPATH="\$(HOST\_DIR)/lib"
+in llvm.mk, so that LLVM binaries compiled for the host always link with host's
+libraries.\\\\
 Commit: http://lists.busybox.net/pipermail/buildroot/2018-April/218938.html
 
 \subsection*{Preparation of the new series}
